--- a/package.json
+++ b/package.json
@@ -1,47 +1,24 @@
 {
-  "name": "hashbrown-cms",
-  "repository": "https://github.com/Putaitu/hashbrown-cms.git",
-  "version": "0.3.1",
-  "description": "The pluggable CMS",
-  "main": "hashbrown.js",
+  "name": "hashbrown.rocks",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Putaitu Productions",
-  "license": "MIT",
-  "dependencies": {
-    "babel-preset-es2015-node5": "^1.2.0",
-    "babelify": "^7.2.0",
-    "bluebird": "^3.3.3",
-    "body-parser": "^1.14.1",
-    "browserify": "^13.0.0",
-    "chalk": "^1.1.3",
-    "exomon": "^1.1.0",
-    "express": "^4.13.3",
-    "glob": "^7.0.3",
-    "gulp": "^3.9.1",
-    "gulp-duration": "0.0.0",
-    "gulp-livereload": "^3.8.1",
-    "gulp-notify": "^2.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.2",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-util": "^3.0.7",
-    "jade": "^1.11.0",
-    "js-beautify": "^1.6.2",
-    "marked": "^0.3.5",
-    "mongodb": "^2.1.7",
-    "multer": "^1.1.0",
-    "path-to-regexp": "^1.2.1",
-    "react": "^15.0.1",
-    "react-dom": "^15.0.1",
-    "restler": "^3.4.0",
-    "rimraf": "^2.5.2",
-    "sass-material-colors": "0.0.5",
-    "to-markdown": "^2.0.1",
-    "utils-merge": "^1.0.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.7.0"
+  "license": "ISC",
+  "devDependencies": {
+    "babel-core": "^6.18.0",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "bluebird": "^3.4.7",
+    "css-loader": "^0.25.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "node-sass": "^3.10.1",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.3",
+    "file-loader": "^0.10.1"
   }
 }
